--- a/src/modules/header/header.scss
+++ b/src/modules/header/header.scss
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: center;
+  background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   &-logo {
