--- a/src/modules/sidebar/sidebar.scss
+++ b/src/modules/sidebar/sidebar.scss
@@ -2,10 +2,11 @@
   width: 300px;
   height: 100vh;
   padding-top: 50px;
+  float: left;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-right: 1px solid #4E4E4E;
+  border-right: 1px solid #D0D0D0;
 
   &-form {
     display: flex;
